; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_skip_type_qualifiers.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_skip_type_qualifiers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KCONST = common dso_local global i32 0, align 4
@KVOLATILE = common dso_local global i32 0, align 4
@KRESTRICT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @skip_type_qualifiers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_type_qualifiers() #0 {
  br label %1

1:                                                ; preds = %15, %0
  %2 = load i32, i32* @KCONST, align 4
  %3 = call i64 @next_token(i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %13, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @KVOLATILE, align 4
  %7 = call i64 @next_token(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %5
  %10 = load i32, i32* @KRESTRICT, align 4
  %11 = call i64 @next_token(i32 %10)
  %12 = icmp ne i64 %11, 0
  br label %13

13:                                               ; preds = %9, %5, %1
  %14 = phi i1 [ true, %5 ], [ true, %1 ], [ %12, %9 ]
  br i1 %14, label %15, label %16

15:                                               ; preds = %13
  br label %1

16:                                               ; preds = %13
  ret void
}

declare dso_local i64 @next_token(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
